# Setu

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  NOTICE  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
changelog/: 2026-02-24.md  unreleased.md
demo/: README.md  server.py
deploy/: docker-compose.yml  init-db.sql
docker/: init-db.sql
docs/: README.md  configuration.md  deployment.md  governance.md  hyperswitch.md  india-profile.md  principles-mission.md  protocol-overview.md  razorpay.md  sep-guidelines.md  versioning.md
indus/: .env.example  README.md
indus/app/: __init__.py  capabilities.py  db.py  hyperswitch.py  main.py  merchant_client.py  models.py  payments_client.py  rate_limit.py  razorpay_client.py  registry.py  sarvam_client.py  security.py  storage.py
legal/cla/: SIGNATORIES.md  automation.md  corporate.md  individual.md
merchant/: .env.example  Dockerfile  README.md  requirements.txt
merchant/app/: __init__.py  audit.py  catalog.py  db.py  delegated_verify.py  discounts.py  errors.py  (+10 more)
payments/: .env.example  Cargo.toml  Dockerfile  README.md
payments/src/: main.rs
psp/: Dockerfile  README.md  requirements.txt
rfc/: agent-discovery.md  agentic-checkout.md  capability-negotiation.md  discounts.md  extensions.md  merchant-registry.md  payment-handlers.md
sarvam-video/: .gitignore  package-lock.json  package.json  tsconfig.json
scripts/: run_dev.sh  validate_specs.py
(+29 files in other folders)
